--- a/nav_team.html
+++ b/nav_team.html
@@ -32,6 +32,7 @@
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
     <link rel="shortcut icon" href="assets/ico/favicon.png">
+
   </head>
 
   <body>
@@ -108,7 +109,7 @@
             <div class="ch-item ch-img-1">
               <div class="ch-info">
                <h3>Eduardo</h3>
-                <p>Medina Alfaro <a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Medina Alfaro <a href="http://gplus.to/emedinaa">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -116,7 +117,7 @@
             <div class="ch-item ch-img-2">
               <div class="ch-info">
                 <h3>Manuel</h3>
-                <p>Rivera Cuzco<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Rivera Cuzco<a href="http://gplus.to/manuelrc">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -124,7 +125,7 @@
             <div class="ch-item ch-img-3">
               <div class="ch-info">
                 <h3>Carlos</h3>
-                <p>Piñan Indacochea <a href="http://drbl.in/eNXY">GDGLima</a></p>
+                <p>Piñan Indacochea <a href="http://gplus.to/carlospinan">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -132,7 +133,7 @@
             <div class="ch-item ch-img-4">
               <div class="ch-info">
                 <h3>Alévandië</h3>
-                <p>Urbina López <a href="http://drbl.in/eODP">GDGLima</a></p>
+                <p>Urbina López <a href="http://gplus.to/alevandie">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -142,7 +143,7 @@
             <div class="ch-item ch-img-5">
               <div class="ch-info">
                <h3>Juan Jose</h3>
-                <p>Rodríguez<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Rodríguez<a href="http://gplus.to/jrodriguezv10">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -150,7 +151,7 @@
             <div class="ch-item ch-img-6">
               <div class="ch-info">
                 <h3>Roxana</h3>
-                <p>Panaqué Cávana<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Panaqué Cávana<a href="http://gplus.to/rbpanaque">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -158,7 +159,7 @@
             <div class="ch-item ch-img-7">
               <div class="ch-info">
                 <h3>Maria Jose</h3>
-                <p>Torres Martijena<a href="http://drbl.in/eNXY">GDGLima</a></p>
+                <p>Torres Martijena<a href="http://gplus.to/majotorres">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -166,7 +167,7 @@
             <div class="ch-item ch-img-8">
               <div class="ch-info">
                 <h3>Wendy</h3>
-                <p>Morales Yovera<a href="http://drbl.in/eODP">GDGLima</a></p>
+                <p>Morales Yovera<a href="http://gplus.to/wendyly">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -177,7 +178,7 @@
             <div class="ch-item ch-img-9">
               <div class="ch-info">
                <h3>Zherly</h3>
-                <p>Vega<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Vega<a href="http://gplus.to/zherlyvega">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -185,7 +186,7 @@
             <div class="ch-item ch-img-10">
               <div class="ch-info">
                 <h3>Lennon</h3>
-                <p>Shimokawa<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Shimokawa<a href="http://gplus.to/lshimokawa">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -193,7 +194,7 @@
             <div class="ch-item ch-img-11">
               <div class="ch-info">
                 <h3>Jhoon</h3>
-                <p>Saravia<a href="http://drbl.in/eNXY">GDGLima</a></p>
+                <p>Saravia<a href="http://gplus.to/jhoon">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -201,7 +202,7 @@
             <div class="ch-item ch-img-12">
               <div class="ch-info">
                 <h3>Alvaro</h3>
-                <p>Gonzales Lluncor<a href="http://drbl.in/eODP">GDGLima</a></p>
+                <p>Gonzales Lluncor<a href="http://gplus.to/agonzalesll">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -212,7 +213,7 @@
             <div class="ch-item ch-img-13">
               <div class="ch-info">
                <h3>Hansy</h3>
-                <p>Schmitt Camacho<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Schmitt Camacho<a href="http://gplus.to/hansyschmitt">GDGLima</a></p>
               </div>
             </div>
           </li>
@@ -220,11 +221,47 @@
             <div class="ch-item ch-img-14">
               <div class="ch-info">
                 <h3>Meison</h3>
-                <p>Chirinos<a href="http://drbl.in/eNXW">GDGLima</a></p>
+                <p>Chirinos<a href="http://gplus.to/ameison">GDGLima</a></p>
               </div>
             </div>
           </li>
          
+          <li>
+            <div class="ch-item ch-img-15">
+              <div class="ch-info">
+               <h3>Niger</h3>
+                <p>Arce<a href="http://gplus.to/narce">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-16">
+              <div class="ch-info">
+                <h3>Milton</h3>
+                <p>Yarleque<a href="http://gplus.to/myarleque">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+
+<br>
+             
+          <li>
+            <div class="ch-item ch-img-17">
+              <div class="ch-info">
+                <h3>Geferson</h3>
+                <p>Pillaca Gonzales<a href="http://gplus.to/gpillaca">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+
+           <li>
+            <div class="ch-item ch-img-18">
+              <div class="ch-info">
+                <h3>Jimmy</h3>
+                <p>Granados<a href="http://goo.gl/5yDp1">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
 
 
         </ul>
